Update index.html to say "Palm Springs" instead of "Your city/Region"

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                  <h2>Contact Us</h2>
                  <p><strong>Email:</strong> <a href="mailto:info@victorsplumbing.example.com">info@victorsplumbing.example.com</a> (Replace with actual email)</p>
                  <p><strong>Phone:</strong> <a href="tel:+15551234567">555-123-4567</a> (Replace with actual phone)</p>
-                 <p><strong>Service Area:</strong> [Your City/Region Here]</p>
+                 <p><strong>Service Area:</strong> Palm Springs Area</p>
                  <p><strong>Categories:</strong> Plumbers, Leak Detecting Service, Plumbing-Drain & Sewer Cleaning, Water Heater Repair, Water Heaters.</p>
              </div>
          </section>
